--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     <div class="social-promo">
         <p>Follow us for more cool tools!</p>
         <div class="social-links">
-            <a href="https://www.tiktok.com/@yourusername" target="_blank" class="social-link tiktok">
+            <a href="https://www.tiktok.com/@hiroshiscachi" target="_blank" class="social-link tiktok">
                 <i class="fab fa-tiktok"></i> TikTok
             </a>
-            <a href="https://www.instagram.com/yourusername" target="_blank" class="social-link instagram">
+            <a href="https://www.instagram.com/me_kyluesky" target="_blank" class="social-link instagram">
                 <i class="fab fa-instagram"></i> Instagram
             </a>
         </div>
